<resources>
    <string name="app_name">Lab 6</string>
    <string name="hello_messages">Hello World</string>
    <string name="ButtonText">I\'m a button</string>

    <string name="login">Login</string>
    <string name="loginname">Login Name</string>
    <string name="pass">Password</string>
    <string name="password">Password</string>

    <string name="radio">RadioButton</string>
    <string name="check">CheckBox</string>
    <string name="what">What does this do</string>

    <string name="dialog_title">Hello</string>
    <string name="dialog_message">Do you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="response">Here is my Response</string>

    <string name="start">Start Chat</string>
    <string name="send">Send</string>

    <string name="weather">Weather Forecast</string>
    <string name="currentTemperature">Current Temperature</string>
    <string name="maxTemperature">Max Temperature</string>
    <string name="minTemperature">Min Temperature</string>
    <string name="windSpeed">Wind Speed</string>

    <string name="messageHere">Message Here</string>
    <string name="id">ID=</string>
    <string name="delete">Delete This Message</string>

    <string name="title_activity_test_toolbar">Test Toolbar</string>
    <string name="about">About</string>
    <string name="comment">Comment</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>

</resources>
