<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.dz.androidlab.StartActivity">

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_messages"
        android:layout_gravity="center"
        android:textSize="35dp"
        android:textColor="@color/colorPrimary"/>

    <Button
        android:id="@+id/helloBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_messages"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/startchatbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/weatherBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/testToolbarBtn"
        android:text="@string/title_activity_test_toolbar"
        android:layout_gravity="center"/>

</LinearLayout>
