<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.dz.androidlab.WeatherForecast">
    
    <ImageView
        android:id="@+id/weatherImg"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/currentTmp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentTemperature"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/minTmp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minTemperature"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/maxTmp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Max Temperature"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/windSpd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/windSpeed"
        android:layout_gravity="center"/>

    
    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleHorizontal"/>
    
</LinearLayout>
